Add sorting and pagination to TripController and UserController; configure PostgreSQL database connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=uniTravelPlaner
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/uni_trip
+spring.datasource.username=dev
+spring.datasource.password=maya
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
